fix overflow on large messages in dashboard

--- a/app/assets/stylesheets/components/_chat_card.scss
+++ b/app/assets/stylesheets/components/_chat_card.scss
@@ -36,11 +36,15 @@
     display: table-cell;
     vertical-align: middle;
     padding-bottom: 8px;
+    height: 40px;
+    overflow: hidden;
+    // text-overflow: ellipsis;
   }
 }
 
 .chat-card-arrow {
   width: 30px;
+  min-width: 30px;
   padding-left: 5px;
   font-size: 25px;
   display: flex;
